[package]
name = "lilygo-t-display-hello-world"
version = "0.1.0"
authors = ["Kris van Rens <krisvanrens@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "lilygo-t-display-hello-world"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.49", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
mipidsi = "0.8.0"
display-interface-spi = "0.5.0"
embedded-graphics = "0.8.1"
esp-idf-hal = "0.44.1"
anyhow = "1.0.95"

[build-dependencies]
embuild = "0.32.0"
cc = "=1.1.30" # Version "1.1.30" necessary until a new version of `esp-idf-sys` is released
